add css and basic configure admin panel

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+
+@import url("https://raw.githubusercontent.com/videogular/videogular2/master/fonts/videogular.css");
+
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
+.container {
+  margin-top: 1%;
+}
